rlox-parser/grammar.bnf
expression     -> equality;
equality       -> comparison ( ( "!=" | "==" ) comparison )*;
comparison     -> addition ( ( ">" | ">=" | "<" | "<=" ) addition )*;
addition       -> multiplication ( ( "-" | "+" ) multiplication )*;
multiplication -> unary ( ( "/" | "*" ) unary )*;
unary          -> ( "!" | "-" ) unary
                | primary
                ;
primary        -> NUMBER
                | STRING
                | "false"
                | "true"
                | "nil"
                | "(" expression ")"
                ;
